# discord-presence

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .overcommit.yml  .rusty-hook.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml
.git-hooks/pre_push/: cargo_test.rb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  rust.yml  stale.yml
crates/bevy/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy/examples/: game.rs
crates/bevy/src/: config.rs  lib.rs  state.rs
crates/ipc/: Cargo.toml  README.md
crates/ipc/src/: discord_ipc.rs  ipc_unix.rs  ipc_windows.rs  lib.rs  main.rs  opcodes.rs  pack_unpack.rs  utils.rs
crates/ipc/src/connection/: manager.rs
crates/ipc/src/models/: rpc_command.rs  rpc_event.rs  voice_channel.rs
crates/ipc/src/models/commands/: base.rs  channel_data.rs  speaking_data.rs
crates/ipc/src/models/events/: base.rs  error.rs  login.rs  mod.rs  ready.rs  selected_channel.rs  voice_state.rs
crates/ipc/src/models/shared/: user.rs  voice_state.rs
crates/ipc/src/rpc/: command.rs  event.rs  mod.rs
crates/presence/: CHANGELOG.md  README.md
crates/presence/src/: error.rs
crates/presence/src/connection/: base.rs
crates/presence/src/models/: mod.rs  rich_presence.rs
crates/rpc/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc/examples/: discord_presence.rs  discord_presence_subscribe.rs  rpc.rs
crates/rpc/src/: client.rs  connection.rs  error.rs  event_handler.rs  lib.rs  macros.rs  models.rs  utils.rs
crates/rpc/src/connection/: base.rs  manager.rs  mod.rs  unix.rs  windows.rs
crates/rpc/src/models/: events.rs  message.rs  mod.rs  payload.rs  rich_presence.rs  shared.rs
crates/rpc/tests/: version_numbers.rs
examples/: 5_seconds.rs  README.md  blocking.rs  blocking_shutdown.rs  discord_presence.rs  discord_presence_subscribe.rs  discord_presence_subscriber.rs  event_data.rs  event_listen.rs  main.rs  rate_limit.rs  unblocking.rs  unix_websocket.rs
examples/discord_presence/: Cargo.toml
examples/discord_presence/src/: main.rs
examples/discord_presence_subscriber/: Cargo.toml
examples/game/: Cargo.toml
examples/game/src/: main.rs
examples/simple-demo/: Cargo.toml
examples/simple-demo/src/: main.rs
src/: activity.rs  client.rs  connection.rs  discord_ipc.rs  error.rs  event_handler.rs  ipc_unix.rs  lib.rs  macros.rs  main.rs  opcodes.rs  utils.rs
src/connection/: base.rs  manager.rs  mod.rs  socket.rs  unix.rs  windows.rs
src/models/: command.rs  commands.rs  events.rs  handshake.rs  login.rs  message.rs  mod.rs  payload.rs  ready.rs  rich_presence.rs  rpc_command.rs  rpc_event.rs  set_activity.rs  shared.rs  voice_channel.rs
src/models/commands/: all.rs  base.rs  get_selected_voice_channel.rs  mod.rs
src/models/events/: base.rs  error.rs  mod.rs  ready.rs  selected_channel.rs  voice_state.rs
src/models/shared/: mod.rs  user.rs  voice_state.rs
src/rich_presence/: mod.rs  set_activity.rs
src/rpc/: command.rs  event.rs
tests/: models_test.rs  reconnect_test.rs  update_test.rs
tests/fixtures/: activity_full.json
