[package]
authors = ["Juliette Cordor", "Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "discord-presence"
description = "A Rust client for Discord RPC."
keywords = ["discord", "rpc", "ipc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jewlexx/discord-presence.git"
version = "0.5.15"
edition = "2018"

[dependencies]
serde_json = "1.0"
byteorder = "1.4"
bytes = "1.4"
crossbeam-channel = "0.5"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
bevy = { version = ">=0.9", optional = true, default-features = false }
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.4"
features = ["v4"]

[dev-dependencies]
ctrlc = "3.4.0"
rusty-hook = "0.11.2"
tracing-subscriber = "0.3.17"
version-sync = "0.9"
