[package]
authors = ["Juliette Cordor", "Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "discord-presence"
description = "A Rust client for Discord RPC."
keywords = ["discord", "rpc", "ipc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jewlexx/discord-presence.git"
version = "0.6.0"
edition = "2018"

[dependencies]
serde_json = "1.0"
byteorder = "1.5"
bytes = "1.5"
crossbeam-channel = "0.5"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
cfg-if = "1.0"
quork = { version = "0.6", default-features = false, features = [
    "traits",
    "macros",
] }
paste = "1.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.4"
features = ["v4"]

[dev-dependencies]
anyhow = "1.0"
ctrlc = "3.4"
rusty-hook = "0.11"
tracing-subscriber = "0.3"
version-sync = "0.9"
