[package]
authors     = ["Juliette Cordor", "Patrick Auernig <dev.patrick.auernig@gmail.com>"]
description = "A Rust client for Discord RPC."
edition     = "2018"
keywords    = ["discord", "ipc", "rpc"]
license     = "MIT"
name        = "discord-presence"
readme      = "README.md"
repository  = "https://github.com/jewlexx/discord-presence.git"
version     = "1.1.1"

[dependencies]
byteorder = "1.5"
bytes = "1.6"
cfg-if = "1.0"
crossbeam-channel = "0.5"
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1.0"
quork = { version = "0.6", default-features = false, features = [
    "macros",
    "traits",
] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"

[dependencies.serde]
features = ["derive"]
version  = "1.0"

[dependencies.uuid]
features = ["v4"]
version  = "1.7"

[dev-dependencies]
anyhow             = "1.0"
ctrlc              = "3.4"
rusty-hook         = "0.11"
tracing-subscriber = "0.3"
version-sync       = "0.9"
