[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor"]
keywords = ["discord", "rpc", "ipc"]
version = "0.2.2"
repository  = "https://github.com/jewlexx/discord-presence.git"
edition = "2021"

[dependencies]
discord-presence = "0.5.1"
bevy = { version = "0.7.0", default-features = false }

[dev-dependencies]
version-sync = "0.9.4"
