[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor"]
keywords = ["discord", "rpc", "ipc"]
version = "0.2.2"
repository  = "https://github.com/jewlexx/discord-presence.git"
edition = "2021"

[dependencies]
discord-presence = "0.5.1"
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "516e4aaa1050e583134cf49ef863f42d792139b0", version = "0.7.0", default-features = false }
parking_lot = "0.12.0"

[dev-dependencies]
version-sync = "0.9.4"
