[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor"]
keywords = ["discord", "rpc", "ipc"]
version = "0.3.1"
repository  = "https://github.com/jewlexx/discord-presence.git"
edition = "2021"

[dependencies]
discord-presence = "0.5"
bevy = { version = "0.7", default-features = false }
parking_lot = "0.12"

[dev-dependencies]
version-sync = "0.9"
