[package]
name = "rpc-discord"
version = "0.0.1-alpha.4"
authors = ["Hacksore <996134+Hacksore@users.noreply.github.com>", "Adel-ak <adelkerow@gmail.com>", "sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>"]
edition = "2018"
description = "A simple, cross-platform crate for interfacing with Discord client locally via RPC"
readme = "README.md"
repository = "https://github.com/hacksore/discord-ipc-rust"
license = "MIT"
keywords = ["discord", "ipc", "RPC", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "0.8", features = ["v4"] }
dotenv = "0.15"
tokio = { version = "1.21", features = ["full"] }
async-trait = "0.1"
async-net = "1.7"
futures-lite = "1.12"
byteorder = "1.4"
log = "0.4"
bytes = "1.2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
cfg-if = "1.0"
