[package]
authors = ["Juliette Cordor", "Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name = "discord-presence"
description = "A Rust client for Discord RPC."
keywords = ["discord", "rpc", "ipc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jewlexx/discord-presence.git"
version = "0.5.3"
edition = "2021"

[dependencies]
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
byteorder = "1.4.3"
log = "0.4.17"
bytes = "1.1.0"
parking_lot = "0.12.0"
crossbeam-channel = "0.5.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"

[dependencies.uuid]
version = "1.1.0"
features = ["v4"]

[dev-dependencies]
version-sync = "0.9.4"
